Start of rapport

--- a/rapport.html
+++ b/rapport.html
@@ -49,30 +49,65 @@
     <main>
         <section>
             <h2>1. Syfte och målgrupp</h2>
-            <p>I uppgiften skapades en webbplats för ...
-                <!-- Ange vad det är för företag eller annan organisation. -->
+            <p>I uppgiften skapades en webbplats för
+                ett nystartat flygbolag som fokuserar på hållbarhet, miljö och kundnöjdhet.
             </p>
-            <p>Syfte med webbplatsen är ...
+            <p>Syfte med webbplatsen är
+                att informera om företaget och dess tjänster, samt att sälja flygresor på en bra, tydlig och smidig
+                hemsida.
+                Hemsidan ska vara lätt att använda, även för den inte så teknikvana användaren.
                 <!-- Fyll på med kort beskrivning som anger syftet med webbplatsen. -->
                 <!-- Alltså syfte och mål med webbplatsen för företaget eller organisationen. -->
             </p>
-            <p>Målgruppen består av ...
+            <p>Målgruppen består av resenärer som är intresserade av att resa med flyg och som värdesätter hållbarhet
+                och miljö till ett bra pris.
                 <!-- Fyll på med beskrivning som identifierar målgruppen. -->
                 <!-- Ange också eventuell uppdelning i delgrupper. -->
             </p>
             <h3>Användarnas behov</h3>
-            <!-- Skriv korta punkter som beskriver vilka behov webbplatsen ska uppfylla. -->
-            <!-- Altså resultatet av målgruppsanalysen. Beskrivning av hur du gjort analysen ska inte finnas med. -->
             <ul>
-                <li>...</li>
-                <li>...</li>
-                <li>...</li>
+                <li>Lättnavigerad struktur som gör det enkelt att hitta information om flyg, destinationer och priser.
+                </li>
+                <li>En snabb och smidig bokningsprocess med tydliga steg och minimal krångel.</li>
+                <li>Information om företagets hållbarhetsarbete för att tillgodose miljömedvetna resenärer.</li>
+                <li>Enkel åtkomst till prisöversikter och möjligheten att jämföra destinationer och paket.</li>
+                <li>Snabb kontakt med kundtjänst via livechatt, e-post och telefon.</li>
+                <li>möjligheten att ändra eller avboka bokningar direkt via hemsidan.</li>
             </ul>
         </section>
         <section>
             <h2>2. Kravspecifikation</h2>
-            <!-- Kravspecifikationen ska vara utformad enligt Garretts modell på det sätt som visas i föreläsningar och laboration. -->
-            <h3>Innehåll</h3>
+
+            <h3>Användarkrav</h3>
+            <ul>
+                <li>Lättnavigerad och användarvänlig webbplats.</li>
+                <li>Möjlighet att enkelt hitta och boka flygresor samt jämföra priser.</li>
+                <li>Enkel tillgång till information om hållbarhet och miljöarbete.</li>
+            </ul>
+
+            <h3>Funktionella krav</h3>
+            <ul>
+                <li>Global och lokal navigation mellan olika sidor.</li>
+                <li>Kontakt via kundtjänst (livechatt, e-post, telefon).</li>
+                <li>Responsiv design anpassad för både mobil och desktop.</li>
+            </ul>
+
+            <h3>Innehållskrav</h3>
+            <ul>
+                <li>Information om företagets tjänster och hållbarhetsarbete.</li>
+                <li>Bilder och grafik som representerar företaget och destinationerna, exempelvis grönt för
+                    miljömedvetenhet.</li>
+                <li>Detaljer om flygpaket, destinationer och priser.</li>
+                <li>Vanliga frågor (FAQ) och kundrecensioner.</li>
+            </ul>
+
+            <h3>Designkrav</h3>
+            <ul>
+                <li>Estetiskt tilltalande med miljömedveten design.</li>
+                <li>Enkel och tydlig typografi.</li>
+                <li>Bilder ska anpassas efter design och layout.</li>
+            </ul>
+
             <!-- Skriv korta konkreta och mätbara krav som beskriver VAD innehållet ska bestå av. -->
             <ul>
                 <li>...</li>
