--- a/f4.html
+++ b/f4.html
@@ -17,11 +17,11 @@
     </ul>
 
     <div class="image-container">
-        <img src="./img/athens.jpg" alt="Destination Image" class="background-image">
+        <img src="./images/athens.jpg" alt="Destination Image" class="background-image">
     </div>
 
     <div class="summary-text">
-        <h1>About us</h1>
+        <h1>About GoEurope</h1>
         <p>
 
         </p>
