--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="f4.html">About us</a></li>
     </ul>
     <div class="image-with-text">
-        <img src="./img/cologne.jpg" alt="Destination Image" class="background-image">
+        <img src="./images/athens.jpg" alt="Destination Image" class="background-image">
         <div class="text-overlay">
             <h1>Explore Europe with GoEurope</h1>
             <p>Fly with us to your favorite European destinations at unbeatable prices</p>
