--- a/f2.html
+++ b/f2.html
@@ -20,12 +20,20 @@
     </div>
 
 
-    <!-- GoEurope Summary swsSection -->
     <div class="summary-text">
-        <h1>Packages</h1>
+        <h1>Explore our favorite Destinations</h1>
         <p>
 
         </p>
+    </div>
+
+    <div class="local-navigation">
+        <ul>
+            <li><a href="paris.html">Paris</a></li>
+            <li><a href="rome.html">Rome</a></li>
+            <li><a href="athens.html">Athens</a></li>
+            <li><a href="berlin.html">Berlin</a></li>
+        </ul>
     </div>
 
 </body>
