--- a/f2.html
+++ b/f2.html
@@ -16,7 +16,7 @@
         <li><a href="f4.html">About us</a></li>
     </ul>
     <div class="image-container">
-        <img src="./images/athens.jpg" alt="Bild 1" id="pic1" class="styled-image">
+        <img src="./images/paris.jpg" alt="Bild 1" id="pic1" class="styled-image">
     </div>
 
 
