Local navigation pictures

--- a/amsterdam.html
+++ b/amsterdam.html
@@ -31,58 +31,42 @@
         <li><a href="rome.html">Rome</a></li>
         <li><a href="berlin.html">Berlin</a></li>
         <li><a href="amsterdam.html">Amsterdam</a></li>
-        <li><a href="madrid.html">Madrid</a></li>
+        <li><a href="barcelona.html">Barcelona</a></li>
       </ul>
     </section>
-    <img src="./images/cityoflights.jpg" alt="Destination Image" class="background-image">
+    <img src="./images/amsterdam.jpg" alt="Destination Image" class="background-image">
 
     <!-- Destination Content -->
     <section class="destination-content">
-      <h1>Paris - The city of lights </h1>
-
+      <h1>Amsterdam - The Venice of the North</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Eiffel Tower</li>
-        <p> The Eiffel Tower is an iconic iron structure located in Paris, France. Built by engineer Gustave
-          Eiffel for the 1889 World's Fair, it stands 330 meters tall and was initially criticized by some
-          for
-          its design. However, it quickly became a global symbol of French engineering and architectural
-          innovation. The tower has three observation levels, offering panoramic views of Paris, and is
-          one of
-          the most visited monuments in the world. Originally meant to be dismantled after 20 years, it
-          was
-          preserved due to its value for communications technology and has since become a beloved
-          landmark.
-        </p>
-        <li> Museum of Louvre</li>
-        <p> The Louvre Museum, located in Paris, France, is the world's largest art museum and a historic
-          monument. Originally a royal palace, it became a public museum in 1793 after the French
-          Revolution.
-          The Louvre houses over 35,000 works of art, including famous pieces like Leonardo da Vinci's
-          Mona
-          Lisa and the ancient Greek statue Venus de Milo. Its collections span from antiquity to the 19th
-          century, showcasing art, sculptures, and artifacts from various cultures. The museum is renowned
-          for
-          its vast and diverse collection, attracting millions of visitors each year.
-        </p>
-        <li> Travel tips </li>
-        <p> Best Time to Visit:
+        <li>The Anne Frank House</li>
+        <p>The Anne Frank House is a poignant museum dedicated to the Jewish diarist Anne Frank, who hid in the house
+          during World War II. Visitors can explore the Secret Annex where Anne and her family lived in hiding, as well
+          as learn about her life and legacy through exhibits that recount the horrors of the Holocaust.</p>
 
-          Spring (April-June) and Fall (September-October) for mild weather and fewer crowds.
-          Local Customs:
+        <li>The Rijksmuseum</li>
+        <p>The Rijksmuseum is the largest and most prestigious museum in the Netherlands, housing a vast collection of
+          Dutch art and history. It showcases masterpieces from the Golden Age, including works by Rembrandt, Vermeer,
+          and Van Gogh. The museum's beautifully restored building and gardens are attractions in themselves.</p>
 
-          Greet with "Bonjour" (hello) and "Merci" (thank you).
-          Dress smartly, especially in restaurants and churches.
-          Tipping is included, but rounding up is appreciated.
-          Transportation:
+        <li>Travel Tips</li>
+        <p>Best Time to Visit:</p>
+        <p>Spring (April-May) to enjoy the famous tulip season, or Fall (September-October) for fewer tourists and
+          pleasant weather.</p>
 
-          Metro: Fast and affordable; multi-day passes available.
-          Walking: Ideal for exploring central areas.
-          Bikes: Use the “Vélib” bike-share for short trips.
-          Uber and taxis are available, but taxis cost more at night.
-          Paris is best enjoyed at a relaxed pace, embracing its cultural charm.</p>
+        <p>Local Customs:</p>
+        <p>Greet with "Hallo" (hello) and "Dank je" (thank you). Cycling is a major part of the culture, so be mindful
+          of bike lanes. Tipping is appreciated but not mandatory, usually rounding up the bill.</p>
+
+        <p>Transportation:</p>
+        <p>Trams and Buses: The public transport system is extensive and efficient. Cycling: Rent a bike to experience
+          the city like a local. Walking: Ideal for exploring the central canal areas. Ferries: Free ferries across the
+          IJ river to the north of the city.</p>
       </ul>
+
 
 
     </section>
