--- a/berlin.html
+++ b/berlin.html
@@ -34,55 +34,40 @@
         <li><a href="madrid.html">Madrid</a></li>
       </ul>
     </section>
-    <img src="./images/cityoflights.jpg" alt="Destination Image" class="background-image">
+    <img src="./images/berlin.jpg" alt="Destination Image" class="background-image">
 
     <!-- Destination Content -->
     <section class="destination-content">
-      <h1>Paris - The city of lights </h1>
-
+      <h1>Berlin - The City of Freedom</h1>
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Eiffel Tower</li>
-        <p> The Eiffel Tower is an iconic iron structure located in Paris, France. Built by engineer Gustave
-          Eiffel for the 1889 World's Fair, it stands 330 meters tall and was initially criticized by some
-          for
-          its design. However, it quickly became a global symbol of French engineering and architectural
-          innovation. The tower has three observation levels, offering panoramic views of Paris, and is
-          one of
-          the most visited monuments in the world. Originally meant to be dismantled after 20 years, it
-          was
-          preserved due to its value for communications technology and has since become a beloved
-          landmark.
-        </p>
-        <li> Museum of Louvre</li>
-        <p> The Louvre Museum, located in Paris, France, is the world's largest art museum and a historic
-          monument. Originally a royal palace, it became a public museum in 1793 after the French
-          Revolution.
-          The Louvre houses over 35,000 works of art, including famous pieces like Leonardo da Vinci's
-          Mona
-          Lisa and the ancient Greek statue Venus de Milo. Its collections span from antiquity to the 19th
-          century, showcasing art, sculptures, and artifacts from various cultures. The museum is renowned
-          for
-          its vast and diverse collection, attracting millions of visitors each year.
-        </p>
-        <li> Travel tips </li>
-        <p> Best Time to Visit:
+        <li>The Brandenburg Gate</li>
+        <p>The Brandenburg Gate is one of Berlin's most famous landmarks. Built in the 18th century as a symbol of
+          peace, it has witnessed many historic events, including the fall of the Berlin Wall in 1989. The gate,
+          designed in neoclassical style, stands at the end of Unter den Linden boulevard and remains a powerful symbol
+          of Germany's reunification.</p>
 
-          Spring (April-June) and Fall (September-October) for mild weather and fewer crowds.
-          Local Customs:
+        <li>The Berlin Wall Memorial</li>
+        <p>The Berlin Wall Memorial is a key site for understanding the division of Berlin during the Cold War.
+          Stretching along Bernauer Strasse, the memorial preserves remnants of the original wall, including a
+          watchtower and border installations. It provides a sobering look at the impact of the wall on the city and its
+          people, commemorating those who lost their lives trying to escape to West Berlin.</p>
 
-          Greet with "Bonjour" (hello) and "Merci" (thank you).
-          Dress smartly, especially in restaurants and churches.
-          Tipping is included, but rounding up is appreciated.
-          Transportation:
+        <li>Travel Tips</li>
+        <p>Best Time to Visit:</p>
+        <p>Spring (April-June) and Fall (September-October) for pleasant weather and cultural festivals.</p>
 
-          Metro: Fast and affordable; multi-day passes available.
-          Walking: Ideal for exploring central areas.
-          Bikes: Use the “Vélib” bike-share for short trips.
-          Uber and taxis are available, but taxis cost more at night.
-          Paris is best enjoyed at a relaxed pace, embracing its cultural charm.</p>
+        <p>Local Customs:</p>
+        <p>Greet with "Hallo" (hello) and "Danke" (thank you). Punctuality is important in Germany. Be respectful when
+          visiting historical sites like the Berlin Wall.</p>
+
+        <p>Transportation:</p>
+        <p>U-Bahn and S-Bahn: Efficient public transport networks, ideal for getting around the city. Cycling: Berlin is
+          bike-friendly with dedicated lanes. Walking: Great for exploring central districts like Mitte and Kreuzberg.
+          Taxis and ride-shares are available, but public transport is often faster and more affordable.</p>
       </ul>
+
 
 
     </section>
