--- a/rome.html
+++ b/rome.html
@@ -34,55 +34,52 @@
         <li><a href="madrid.html">Madrid</a></li>
       </ul>
     </section>
-    <img src="./images/cityoflights.jpg" alt="Destination Image" class="background-image">
+    <img src="./images/rome.jpg" alt="Destination Image" class="background-image">
 
     <!-- Destination Content -->
     <section class="destination-content">
-      <h1>Paris - The city of lights </h1>
+      <h1>Rome - The eternal city </h1>
 
 
       <h2>Top Attractions</h2>
       <ul>
-        <li>The Eiffel Tower</li>
-        <p> The Eiffel Tower is an iconic iron structure located in Paris, France. Built by engineer Gustave
-          Eiffel for the 1889 World's Fair, it stands 330 meters tall and was initially criticized by some
-          for
-          its design. However, it quickly became a global symbol of French engineering and architectural
-          innovation. The tower has three observation levels, offering panoramic views of Paris, and is
-          one of
-          the most visited monuments in the world. Originally meant to be dismantled after 20 years, it
-          was
-          preserved due to its value for communications technology and has since become a beloved
-          landmark.
+        <li>The Colosseum</li>
+        <p>
+          The Colosseum is an ancient Roman amphitheater located in Rome, Italy. Built between 70-80 AD, it
+          could hold up to 50,000 spectators and was used for gladiatorial contests, public spectacles, and
+          dramas. It remains a symbol of Roman engineering and is one of the most visited landmarks in the
+          world. Today, it stands partially ruined due to earthquakes and stone theft but is a significant
+          historical site, offering tours that delve into its rich past.
         </p>
-        <li> Museum of Louvre</li>
-        <p> The Louvre Museum, located in Paris, France, is the world's largest art museum and a historic
-          monument. Originally a royal palace, it became a public museum in 1793 after the French
-          Revolution.
-          The Louvre houses over 35,000 works of art, including famous pieces like Leonardo da Vinci's
-          Mona
-          Lisa and the ancient Greek statue Venus de Milo. Its collections span from antiquity to the 19th
-          century, showcasing art, sculptures, and artifacts from various cultures. The museum is renowned
-          for
-          its vast and diverse collection, attracting millions of visitors each year.
-        </p>
-        <li> Travel tips </li>
-        <p> Best Time to Visit:
 
-          Spring (April-June) and Fall (September-October) for mild weather and fewer crowds.
+        <li>The Vatican Museums</li>
+        <p>
+          The Vatican Museums, located within Vatican City, contain some of the most important art and
+          cultural treasures of the Catholic Church. Established in the early 16th century, the museums house
+          famous masterpieces like Michelangelo's ceiling in the Sistine Chapel and Raphael's Rooms. Visitors
+          can explore a vast collection that includes ancient Roman and Egyptian art, Renaissance paintings, and
+          more. The museums attract millions of visitors annually, offering a journey through centuries of art
+          and history.
+        </p>
+
+        <li>Travel Tips</li>
+        <p>
+          Best Time to Visit:
+          <br>
+          Spring (April-June) and Fall (September-October) for pleasant weather and fewer tourists.
+          <br>
           Local Customs:
-
-          Greet with "Bonjour" (hello) and "Merci" (thank you).
-          Dress smartly, especially in restaurants and churches.
-          Tipping is included, but rounding up is appreciated.
+          <br>
+          Greet with "Buongiorno" (good morning) and "Grazie" (thank you). Dress modestly when visiting churches,
+          including the Vatican.
+          <br>
           Transportation:
-
-          Metro: Fast and affordable; multi-day passes available.
-          Walking: Ideal for exploring central areas.
-          Bikes: Use the “Vélib” bike-share for short trips.
-          Uber and taxis are available, but taxis cost more at night.
-          Paris is best enjoyed at a relaxed pace, embracing its cultural charm.</p>
+          <br>
+          Metro and buses are the best options for public transport. Walking is ideal for the city center. Taxis
+          and ridesharing services are also available. Be cautious of pickpockets in crowded areas.
+        </p>
       </ul>
+
 
 
     </section>
