--- a/f2.html
+++ b/f2.html
@@ -27,8 +27,9 @@
         <ul>
             <li><a href="paris.html">Paris</a></li>
             <li><a href="rome.html">Rome</a></li>
-            <li><a href="athens.html">Athens</a></li>
+            <li><a href="amsterdam.html">Amsterdam</a></li>
             <li><a href="berlin.html">Berlin</a></li>
+            <li><a href="barcelona.html">Barcelona</a></li>
         </ul>
     </div>
     <div class="image-container">
