--- a/paris.html
+++ b/paris.html
@@ -16,9 +16,9 @@
         <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="f2.html">Destinations</a></li>
+                <li><a href="f3.html">Packages</a></li>
+                <li><a href="f4.html">About us</a></li>
             </ul>
         </nav>
     </header>
