--- a/f2.html
+++ b/f2.html
@@ -34,7 +34,7 @@
     </div>
     <div class="image-container">
         <img src="./images/paris.jpg" alt="Bild 1" id="pic1" class="styled-image">
-    </div>
+        </nav>
 </body>
 
 </html>
