--- a/f3.html
+++ b/f3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoEurope</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Package Deals - GoEurope</title>
 </head>
 
 <body>
@@ -13,21 +13,50 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="f2.html">Destinations</a></li>
         <li><a href="f3.html">Packages</a></li>
-        <li><a href="f4.html">About us</a></li>
+        <li><a href="f4.html">About Us</a></li>
     </ul>
-    <div class="image-container">
-        <img src="./images/bigben.jpg" alt="Bild 1" id="pic1" class="styled-image">
-    </div>
 
-
-    <!-- GoEurope Summary Section -->
     <div class="summary-text">
-        <h1>Packages</h1>
-        <p>
-
-        </p>
+        <h1>Explore Our Package Deals</h1>
+        <p>Get the best offers on flights and accommodations in some of Europe's most beautiful cities!</p>
     </div>
 
+    <div class="package-container">
+        <div class="package">
+            <h2>Paris</h2>
+            <p>Flight Ticket: $500</p>
+            <p>Accommodation: $150/night</p>
+            <p><strong>Total for 5 nights: $1,000</strong></p>
+        </div>
+        <div class="package">
+            <h2>Amsterdam</h2>
+            <p>Flight Ticket: $450</p>
+            <p>Accommodation: $120/night</p>
+            <p><strong>Total for 5 nights: $840</strong></p>
+        </div>
+        <div class="package">
+            <h2>Rome</h2>
+            <p>Flight Ticket: $550</p>
+            <p>Accommodation: $100/night</p>
+            <p><strong>Total for 5 nights: $550</strong></p>
+        </div>
+        <div class="package">
+            <h2>Barcelona</h2>
+            <p>Flight Ticket: $600</p>
+            <p>Accommodation: $130/night</p>
+            <p><strong>Total for 5 nights: $1,000</strong></p>
+        </div>
+        <div class="package">
+            <h2>Berlin</h2>
+            <p>Flight Ticket: $400</p>
+            <p>Accommodation: $110/night</p>
+            <p><strong>Total for 5 nights: $650</strong></p>
+        </div>
+    </div>
+
+    <div class="image-container">
+        <img src="./images/packages.jpg" alt="Package Deals" id="pic1" class="styled-image">
+    </div>
 </body>
 
 </html>
