Last designs + contact form

--- a/barcelona.html
+++ b/barcelona.html
@@ -31,7 +31,7 @@
         <li><a href="rome.html">Rome</a></li>
         <li><a href="berlin.html">Berlin</a></li>
         <li><a href="amsterdam.html">Amsterdam</a></li>
-        <li><a href="madrid.html">Madrid</a></li>
+        <li><a href="barcelona.html">Barcelona</a></li>
       </ul>
     </section>
     <img src="./images/barcelona.jpg" alt="Destination Image" class="background-image">
