--- a/f3.html
+++ b/f3.html
@@ -15,7 +15,9 @@
         <li><a href="f3.html">Packages</a></li>
         <li><a href="f4.html">About Us</a></li>
     </ul>
-
+    <div class="image-container">
+        <img src="./images/aboutus.jpg" alt="Destination Image" class="background-image">
+    </div>
     <div class="summary-text">
         <h1>Explore Our Package Deals</h1>
         <p>Get the best offers on flights and accommodations in some of Europe's most beautiful cities!</p>
@@ -54,9 +56,6 @@
         </div>
     </div>
 
-    <div class="image-container">
-        <img src="./images/packages.jpg" alt="Package Deals" id="pic1" class="styled-image">
-    </div>
 </body>
 
 </html>
