--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
         <li><a href="f3.html">Packages</a></li>
         <li><a href="f4.html">About us</a></li>
     </ul>
-    <div class="image-with-text">
+    <div class="image-container">
         <img src="./images/europe.jpg" alt="Destination Image" class="background-image">
-        <div class="text-overlay">
-            <h1>Explore Europe with GoEurope</h1>
-            <p>Fly with us to your favorite European destinations at unbeatable prices</p>
-        </div>
+    </div>
+
     </div>
     <div class="summary-text">
-        <h1>Welcome to GoEurope</h1>
+        <h1>Explore Europe with GoEurope
+        </h1>
         <p>
-            GoEurope is your eco-friendly airline offering amazing travel experiences at unbeatable prices! We are
-            committed to minimizing our environmental impact by using modern, fuel-efficient aircraft and sustainable
-            practices. With GoEurope, you can explore a wide range of cool destinations across Europe while enjoying
-            affordable fares and exceptional service. Whether you're planning a weekend getaway or a dream vacation,
-            we make it easy to travel smarter, greener, and for less!
+            Welcome to GoEurope!
+            Discover Europe's most exciting and unique destinations with us. Whether you dream of exploring the historic
+            streets of Rome, the charming canals of Amsterdam, or the sunny beaches of Barcelona, we have the perfect
+            trip for you. At GoEurope, we offer carefully selected packages and destinations to provide you with an
+            unforgettable experience. Let us be your guide to a Europe full of adventure, culture, and amazing memories.
+            Choose your next dream destination and start your European journey today!
         </p>
+        <a href="http://127.0.0.1:5500/EuropeGo/rapport.html" class="simple-link">Länk till rapport
+        </a>
+
     </div>
 
 
