--- a/paris.html
+++ b/paris.html
@@ -31,10 +31,10 @@
                 <li><a href="rome.html">Rome</a></li>
                 <li><a href="berlin.html">Berlin</a></li>
                 <li><a href="amsterdam.html">Amsterdam</a></li>
-                <li><a href="madrid.html">Madrid</a></li>
+                <li><a href="barcelona.html">Barcelona</a></li>
             </ul>
         </section>
-        <img src="./images/cityoflights.jpg" alt="Destination Image" class="background-image">
+        <img src="./images/paris.jpg" alt="Destination Image" class="background-image">
 
         <!-- Destination Content -->
         <section class="destination-content">
