--- a/rapport.html
+++ b/rapport.html
@@ -56,8 +56,7 @@
                 att informera om företaget och dess tjänster, samt att sälja flygresor på en bra, tydlig och smidig
                 hemsida.
                 Hemsidan ska vara lätt att använda, även för den inte så teknikvana användaren.
-                <!-- Fyll på med kort beskrivning som anger syftet med webbplatsen. -->
-                <!-- Alltså syfte och mål med webbplatsen för företaget eller organisationen. -->
+
             </p>
             <p>Målgruppen består av resenärer som är intresserade av att resa med flyg och som värdesätter hållbarhet
                 och miljö till ett bra pris.
@@ -109,9 +108,10 @@
             </ul>
 
             <!-- Skriv korta konkreta och mätbara krav som beskriver VAD innehållet ska bestå av. -->
+            <h4> Mätbara innehållskrav </h4>
             <ul>
-                <li>...</li>
-                <li>...</li>
+                <li>Webbplatsen ska innehålla fyra huvudsektioner: Home, detinations, packages, about us. </li>
+                <li></li>
                 <li>...</li>
             </ul>
             <h3>Funktion</h3>
@@ -144,20 +144,10 @@
         <section>
             <h2>5. Utvärdering mot kravspecifikationen</h2>
             <!-- Kopiera din kravspecifikation hit. Efter varje punkt lägger du till en kort mening som motiverar hur kravet är uppfyllt eller motiverar varför det inte är uppfyllt. -->
+
         </section>
-        <section>
-            <h2>6. Användartest</h2>
-            <h3>- med metoden "Tänka högt" (Thinking Out Loud)</h3>
-            <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
-            <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
-            <p>...</p>
-        </section>
-        <section>
-            <h2>Källförteckning</h2>
-            <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
-            <!-- Skriv en källförteckning enligt Harvardsystemet för de källor du refererat till i din text. Det ska åtminstone vara Garretts bok. -->
-            <p>...</p>
-        </section>
+
+
     </main>
 </body>
 
