--- a/f2.html
+++ b/f2.html
@@ -32,9 +32,8 @@
             <li><a href="barcelona.html">Barcelona</a></li>
         </ul>
     </div>
-    <div class="image-container">
-        <img src="./images/paris.jpg" alt="Bild 1" id="pic1" class="styled-image">
-        </nav>
+    <img src="./images/paris.jpg" alt="Destination Image" class="background-image">
+    </nav>
 </body>
 
 </html>
