--- a/f4.html
+++ b/f4.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>GoEurope</title>
 </head>
 
 <body>
+    <!-- Navigation menu -->
     <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="f2.html">Destinations</a></li>
@@ -16,17 +17,46 @@
         <li><a href="f4.html">About us</a></li>
     </ul>
 
+    <!-- Hero image section -->
     <div class="image-container">
-        <img src="./images/athens.jpg" alt="Destination Image" class="background-image">
+        <img src="./images/aboutus.jpg" alt="Destination Image" class="background-image">
     </div>
 
+    <!-- About GoEurope section -->
     <div class="summary-text">
         <h1>About GoEurope</h1>
-        <p>
-
-        </p>
+        <p>GoEurope is a leading travel agency specializing in unforgettable European adventures. With curated packages
+            and customizable itineraries, we ensure our travelers experience Europe’s rich culture, breathtaking
+            landscapes, and vibrant cities. Join us and discover Europe like never before!</p>
     </div>
 
-</body>
+    <!-- Contact Form section -->
+
+    <body>
+        <!-- Kontaktformulär -->
+        <div class="contact-form" id="contact-form">
+            <h2>Contact Us</h2>
+            <form action="#thankyou" method="get">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name" required><br><br>
+
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="subject">Subject:</label><br>
+                <input type="text" id="subject" name="subject"><br><br>
+
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+        <!-- Tack-meddelande som visas efter formulär skickas -->
+        <div id="thankyou" class="thankyou-message">
+            <p>Thank you for your message! We will get back to you soon.</p>
+        </div>
+    </body>
 
 </html>
