--- a/f2.html
+++ b/f2.html
@@ -34,6 +34,9 @@
     </div>
     <img src="./images/paris.jpg" alt="Destination Image" class="background-image">
     </nav>
+    <footer>
+        <p>&copy; 2024 EuropeGO. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
