--- a/f3.html
+++ b/f3.html
@@ -55,7 +55,9 @@
             <p><strong>Total for 5 nights: $650</strong></p>
         </div>
     </div>
-
+    <footer>
+        <p>&copy; 2024 EuropeGO. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
