--- a/amsterdam.html
+++ b/amsterdam.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>EuropeGO - Destination Name</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to your main CSS file -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- Main Navigation -->
   <header>
     <nav>
       <ul class="navigation">
@@ -22,9 +21,9 @@
       </ul>
     </nav>
   </header>
-  <!-- Main Content -->
+
   <main>
-    <!-- Local Navigation -->
+
     <section class="local-navigation">
       <ul>
         <li><a href="paris.html">Paris</a></li>
@@ -36,7 +35,7 @@
     </section>
     <img src="./images/amsterdam.jpg" alt="Destination Image" class="background-image">
 
-    <!-- Destination Content -->
+
     <section class="destination-content">
       <h1>Amsterdam - The Venice of the North</h1>
 
@@ -67,12 +66,9 @@
           IJ river to the north of the city.</p>
       </ul>
 
-
-
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2024 EuropeGO. All rights reserved.</p>
   </footer>
