--- a/rapport.html
+++ b/rapport.html
@@ -48,30 +48,32 @@
     </header>
     <main>
         <section>
-            <h2>1. Syfte och målgrupp</h2>
-            <p>I uppgiften skapades en webbplats för
-                ett nystartat flygbolag som fokuserar på hållbarhet, miljö och kundnöjdhet.
-            </p>
-            <p>Syfte med webbplatsen är
-                att informera om företaget och dess tjänster, samt att sälja flygresor på en bra, tydlig och smidig
-                hemsida.
-                Hemsidan ska vara lätt att använda, även för den inte så teknikvana användaren.
+            <section>
+                <h2>1. Syfte och målgrupp</h2>
+                <p>I uppgiften skapades en webbplats för ett nystartat flygbolag som fokuserar på hållbarhet, miljö och
+                    kundnöjdhet.</p>
+                <p>Syftet med webbplatsen är att informera om företaget och dess tjänster, samt att sälja flygresor på
+                    en bra, tydlig och smidig hemsida. Hemsidan ska vara lätt att använda, även för den inte så
+                    teknikvana användaren.</p>
+                <ul>
+                    <li>Enkel och intuitiv navigering, även för teknikovana användare.</li>
+                    <li>Tydlig och lättillgänglig information om företaget och dess tjänster.</li>
+                    <li>Fokus på hållbarhet och miljöarbete, med detaljer om företagets initiativ.</li>
+                    <li>Support och kundservice som är lätt att nå och använda.</li>
+                </ul>
+            </section>
 
-            </p>
             <p>Målgruppen består av resenärer som är intresserade av att resa med flyg och som värdesätter hållbarhet
                 och miljö till ett bra pris.
-                <!-- Fyll på med beskrivning som identifierar målgruppen. -->
-                <!-- Ange också eventuell uppdelning i delgrupper. -->
+
             </p>
             <h3>Användarnas behov</h3>
             <ul>
                 <li>Lättnavigerad struktur som gör det enkelt att hitta information om flyg, destinationer och priser.
                 </li>
-                <li>En snabb och smidig bokningsprocess med tydliga steg och minimal krångel.</li>
                 <li>Information om företagets hållbarhetsarbete för att tillgodose miljömedvetna resenärer.</li>
                 <li>Enkel åtkomst till prisöversikter och möjligheten att jämföra destinationer och paket.</li>
-                <li>Snabb kontakt med kundtjänst via livechatt, e-post och telefon.</li>
-                <li>möjligheten att ändra eller avboka bokningar direkt via hemsidan.</li>
+                <li>Snabb kontakt med kundtjänst via kontaktformulär.</li>
             </ul>
         </section>
         <section>
@@ -80,74 +82,130 @@
             <h3>Användarkrav</h3>
             <ul>
                 <li>Lättnavigerad och användarvänlig webbplats.</li>
-                <li>Möjlighet att enkelt hitta och boka flygresor samt jämföra priser.</li>
+                <li>Möjlighet att enkelt hitta flygresor samt jämföra priser.</li>
                 <li>Enkel tillgång till information om hållbarhet och miljöarbete.</li>
             </ul>
 
             <h3>Funktionella krav</h3>
             <ul>
                 <li>Global och lokal navigation mellan olika sidor.</li>
-                <li>Kontakt via kundtjänst (livechatt, e-post, telefon).</li>
-                <li>Responsiv design anpassad för både mobil och desktop.</li>
+                <li>Kontakt via kundtjänst via ett tydligt och lätthanterat Kontaktformulär.</li>
+                <li>Responsiv design för bättre användarupplevelse.</li>
             </ul>
 
             <h3>Innehållskrav</h3>
             <ul>
                 <li>Information om företagets tjänster och hållbarhetsarbete.</li>
-                <li>Bilder och grafik som representerar företaget och destinationerna, exempelvis grönt för
-                    miljömedvetenhet.</li>
+                <li>Bilder och grafik som representerar företaget och destinationerna.</li>
                 <li>Detaljer om flygpaket, destinationer och priser.</li>
-                <li>Vanliga frågor (FAQ) och kundrecensioner.</li>
+                <li>Vanliga frågor (FAQ).</li>
             </ul>
 
             <h3>Designkrav</h3>
             <ul>
-                <li>Estetiskt tilltalande med miljömedveten design.</li>
+                <li>Estetiskt tilltalande design som representerar destinationerna.</li>
                 <li>Enkel och tydlig typografi.</li>
-                <li>Bilder ska anpassas efter design och layout.</li>
+                <li>Bilder ska anpassas efter design och layout och den generella idén på hemsidan.</li>
             </ul>
 
-            <!-- Skriv korta konkreta och mätbara krav som beskriver VAD innehållet ska bestå av. -->
-            <h4> Mätbara innehållskrav </h4>
+            <h4>Mätbara innehållskrav</h4>
             <ul>
-                <li>Webbplatsen ska innehålla fyra huvudsektioner: Home, detinations, packages, about us. </li>
-                <li></li>
-                <li>...</li>
+                <li>Webbplatsen ska innehålla fyra huvudsektioner: Home, Destinations, Packages, About Us.</li>
+                <li>Varje sektion ska vara lättillgänglig från huvudmenyn.</li>
+                <li>Alla sidor ska innehålla relevant information.</li>
             </ul>
+
             <h3>Funktion</h3>
-            <!-- Skriv korta konkreta och mätbara krav som beskriver VAD användaren ska kunna göra. -->
             <ul>
-                <li>...</li>
-                <li>...</li>
-                <li>...</li>
+                <li>Användaren ska kunna jämföra priser och paket för olika destinationer.</li>
+                <li>Användaren ska kunna läsa information om hållbarhet och miljöarbete.</li>
+                <li>Användaren ska kunna kontakta företaget genom kontaktformulär.</li>
             </ul>
         </section>
+
         <section>
             <h2>3. Beskrivning av arbetet</h2>
-            <!-- Beskriv hur du arbetat med uppgiften. -->
-            <!-- För VG är det viktigt att du beskriver hur du använt Garretts modell och tar med referenser med sidnummer till boken, för att styrka det du tar upp i din text. Se mer info i rutan om referenser på uppgiftens webbsida. -->
-            <p>...</p>
+            <p>Jag har arbetat med att skapa en responsiv och användarvänlig webbplats för GoEurope. Genom att använda
+                HTML och CSS har jag implementerat funktioner som global och lokal navigering och
+                hållbarhetsinformation.</p>
         </section>
+
         <section>
             <h2>4. Bilder</h2>
-            <!-- Beskriv i en punktlista vilka redigeringar du gjort av bilderna i ett bildredigeringsprogram, för att anpassa dem till hur du använder dem på din webbplats. -->
-            <p>Bilderna har redigerats i ett bildredigeringsprogram, där följande gjorts:</p>
+            <p>Bilderna har redigerats i ett bildredigeringsprogram som heter "Fotor", där följande gjorts:</p>
             <ul>
-                <li>...</li>
-                <li>...</li>
-                <li>...</li>
+                <li> Beskärning av bilder för att passa webbplatsens layout och minska filstorlek men samtidigt
+                    upprätthålla en hög kvalité.</li>
+                <li>"Darkening" effekt för att få bilderna att se varmare ut - bidrar till känslan av att resa
+                    utomlands och passar mer in på hemsidans design.</li>
             </ul>
-            <!-- För VG anger du också var på din webbplats du använt dig av picture-elementet. Har du använt det på flera ställen, duplicerar du textstycket. -->
-            <!-- Om du inte gjort VG-kravet, tar du bort nedanstående stycke. -->
-            <p>Picture-elementet används på sidan ... för bilden ...</p>
         </section>
+
         <section>
-            <h2>5. Utvärdering mot kravspecifikationen</h2>
-            <!-- Kopiera din kravspecifikation hit. Efter varje punkt lägger du till en kort mening som motiverar hur kravet är uppfyllt eller motiverar varför det inte är uppfyllt. -->
+            <h2> Utvärdering mot Kravspecifikation</h2>
+
+
+            <h3>Användarkrav</h3>
+            <ul>
+                <li><strong>Lättnavigerad och användarvänlig webbplats</strong>: Webbplatsen har en tydlig och
+                    lättanvänd navigering.</li>
+                <li><strong>Möjlighet att enkelt hitta flygresor samt jämföra priser</strong>: Ingen direkt funktion för
+                    att jämföra priser, men paketsektionen ger information om resor och priser.</li>
+                <li><strong>Enkel tillgång till information om hållbarhet och miljöarbete</strong>:
+                    Hållbarhetsinformation finns.</li>
+            </ul>
+
+            <h3>Funktionella krav</h3>
+            <ul>
+                <li><strong>Global och lokal navigation mellan olika sidor</strong>: Global och lokal navigering är
+                    korrekt implementerad genom de olika destinationerna under "Destinations".</li>
+                <li><strong>Kontakt via kundtjänst via ett tydligt och lätthanterat Kontaktformulär</strong>:
+                    Kontaktformuläret är tydligt och lättanvänt.</li>
+                <li><strong>Responsiv design för bättre användarupplevelse</strong>: Webbplatsen är responsiv på flera
+                    element.</li>
+            </ul>
+
+            <h3>Innehållskrav</h3>
+            <ul>
+                <li><strong>Information om företagets tjänster och hållbarhetsarbete</strong>: Information om hållbarhet
+                    finns på "about us"-sidan.</li>
+                <li><strong>Bilder och grafik som representerar företaget och destinationerna</strong>: Bilderna är
+                    relevanta och passar webbplatsens tema.</li>
+                <li><strong>Detaljer om flygpaket, destinationer och priser</strong>: Paketsektionen innehåller
+                    information om både resemål och pris.</li>
+                <li><strong>Vanliga frågor (FAQ)</strong>: FAQ-sektionen är implementerad.</li>
+            </ul>
+
+            <h3>Designkrav</h3>
+            <ul>
+                <li><strong>Estetiskt tilltalande design som representerar destinationerna</strong>: Webbplatsens design
+                    är visuellt tilltalande och passar destinations-temat.</li>
+                <li><strong>Enkel och tydlig typografi</strong>: Typsnittet är klart och lättläst.</li>
+                <li><strong>Bilder ska anpassas efter design och layout</strong>: Bilderna anpassas väl till layouten
+                    och ger en bra visuell upplevelse.</li>
+            </ul>
+
+            <h4>Mätbara innehållskrav</h4>
+            <ul>
+                <li><strong>Webbplatsen ska innehålla fyra huvudsektioner: Home, Destinationer, Packages, About
+                        Us</strong>: Dessa sektioner finns och är tillgängliga.</li>
+                <li><strong>Varje sektion ska vara lättillgänglig från huvudmenyn</strong>: Alla sektioner är
+                    lättillgängliga via huvudmenyn.</li>
+                <li><strong>Alla sidor ska innehålla relevant information</strong>: Sidorna innehåller relevant
+                    innehåll, men mer detaljer om tjänster och priser kan förbättra användarupplevelsen.</li>
+            </ul>
+
+            <h3>Funktion</h3>
+            <ul>
+                <li><strong>Användaren ska kunna jämföra priser och paket för olika destinationer</strong>: Det finns
+                    paket för resor.</li>
+                <li><strong>Användaren ska kunna läsa information om hållbarhet och miljöarbete</strong>:
+                    Hållbarhetsinformation finns och är lättillgänglig.</li>
+                <li><strong>Användaren ska kunna kontakta företaget genom kontaktformulär</strong>: Kontaktformuläret
+                    fungerar som det ska och gör det lätt för användare att kontakta företaget.</li>
+            </ul>
 
         </section>
-
-
     </main>
 </body>
 
