--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             unforgettable experience. Let us be your guide to a Europe full of adventure, culture, and amazing memories.
             Choose your next dream destination and start your European journey today!
         </p>
-        <a href="http://127.0.0.1:5500/EuropeGo/rapport.html" class="simple-link">Länk till rapport
+        <a href="https://cute-pithivier-acf2ef.netlify.app/" class="simple-link">Länk till rapport
         </a>
 
     </div>
